# MedLock-FakeMedicinePrevention

./: ai_fraud_detector.py  app.py  batches.json  blockchain_integration.py  create_test_data.py  generate_demo_qr.py  manufacturers.json  pyproject.toml  readme  replit.md  scan_logs.json
MEDLOCK/: dashboard.css  dashboard.html  dashboard.js  index.html  script.js  style.css  welcome.html
MedLock/: app.py  pyproject.toml  replit.md
MedLock/.upm/: store.json
MedLock/templates/: admin_dashboard.html  admin_login.html  base.html  batch_upload.html  manufacturer_dashboard.html  register.html  verify.html
data/: batches.json  blockchain_cache.json  manufacturers.json  scan_logs.json
templates/: admin_batch_details.html  admin_dashboard.html  admin_manufacturer_details.html  admin_scan_logs.html  base.html  base_new.html  batch_upload.html  demo.html  index.html  login.html  register.html  verify.html
