[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "qrcode[pil]>=8.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sendgrid>=6.12.4",
    "web3>=7.12.0",
    "werkzeug>=3.1.3",
]
